--- a/templates/Backup-Drives.ps1.j2
+++ b/templates/Backup-Drives.ps1.j2
@@ -41,8 +41,12 @@ $source = @(
       & $scriptDir/Backup-S3Sync.ps1 `
           -sourceDir "{{ item.source_dir }}" `
           -s3Bucket "{{ item.s3.bucket }}" `
-          -s3Folder "{{ item.s3.folder }}" `
+          {% if item.s3.prefix is defined and item.s3.prefix | trim != '' %}
           -s3Prefix "{{ item.s3.prefix }}" `
+          {% endif %}
+          {% if item.s3.folder is defined and item.s3.folder | trim != '' %}
+          -s3Folder "{{ item.s3.folder }}" `
+          {% endif %}
           -s3Endpoint "{{ item.s3.endpoint }}" `
           -s3Profile "{{ item.s3.profile }}" `
           -s3Delete ( {% if item.s3.delete | default(false) | bool %}$true{% else %}$false{% endif %} ? $true : $false ) `
