--- a/templates/Backup-Drives.ps1.j2
+++ b/templates/Backup-Drives.ps1.j2
@@ -41,21 +41,12 @@ $source = @(
       & $scriptDir/Backup-S3Sync.ps1 `
           -sourceDir "{{ item.source_dir }}" `
           -s3Bucket "{{ item.s3.bucket }}" `
-          {% if item.s3.prefix is defined and item.s3.prefix | trim != '' %}
-          -s3Prefix "{{ item.s3.prefix }}" `
-          {% endif %}
-          {% if item.s3.folder is defined and item.s3.folder | trim != '' %}
-          -s3Folder "{{ item.s3.folder }}" `
-          {% endif %}
+          -s3Prefix "{{ item.s3.prefix | default('') }}" `
+          -s3Folder "{{ item.s3.folder | default('') }}" `
           -s3Endpoint "{{ item.s3.endpoint }}" `
           -s3Profile "{{ item.s3.profile }}" `
-          -s3Delete ( {% if item.s3.delete | default(false) | bool %}$true{% else %}$false{% endif %} ? $true : $false ) `
-          {% if item.s3.exclude is defined and item.s3.exclude | length > 0 %}
-          -s3Exclude @(
-              {% for exclude in item.s3.exclude %}
-              "{{ exclude }}"{{ "," if not loop.last }}
-              {% endfor %}
-          ){% endif %}
+          -s3Delete ${{ item.s3.delete | default(false) | bool }} `
+          -s3Exclude @("{{ item.s3.exclude | default([]) | join('", "') }}")
  
       $backupPerformed = $true
   }
